--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,9 +25,9 @@
 
     <!-- Hero -->
     <div dir="rtl" class="w-full gap-10 px-9 py-16 flex -my-2 flex-col justify-center items-center bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-1.png);">
-        <h2 class="text-4xl font-bold">Elizabet</h2>
-        <p  class="text-3xl font-medium text-center">مدل الیزابت یکی از پر فروشترین محصولات گالری پاندورا هستش.</p>
-        <img src="../assets/images/main-2.png" class=""/>
+        <h2 id="head-title" class="text-4xl font-bold"></h2>
+        <p id="head-desc" class="text-3xl font-medium text-center"></p>
+        <img id="head-img" src="../assets/images/main-2.png" class=""/>
         <button class="btn bg-[#FFA280] border-[#FFA280] text-xl w-52 h-14 hover:bg-[#FFA280]">مشاهده محصول</button>
     </div>
 
@@ -45,11 +45,8 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div class="flex flex-col w-full justify-center items-center gap-8 pt-6">
-            <div class="flex flex-col w-full justify-center items-center gap-4">
-                <a href="#"><img src="../assets/images/main-4.png"/></a>
-                <a href="#"><h3 class="text-[#FFA280] text-2xl font-bold">انگشتر</h3></a>
-            </div>
+        <div id="category-con" class="flex flex-col w-full justify-center items-center gap-8 pt-6">
+
         </div>
     </div>
 
@@ -60,12 +57,8 @@
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
-        <div dir="rtl" class="grid grid-cols-2 w-full justify-items-center pt-4 ">
-            <div dir="rtl" class="flex flex-col max-w-[160px]">
-                <img src="../assets/images/main-5.png" class="max-w-[140px]"/>
-                <h3 class="text-[#FFA280] text-2xl font-bold pt-3">انگشتر</h3>
-                <p class="pt-1 text-lg">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و  </p>
-            </div>
+        <div id="product-con" dir="rtl" class="grid grid-cols-2 w-full justify-items-center pt-4 ">
+            
         </div>
     </div>
     <div class="w-full h-[2px] bg-[#C3C3C3]"></div>
@@ -78,7 +71,7 @@
             <div class="w-[90%] h-1 bg-[#C5C5C5] rounded-3xl relative bottom-1"></div>
         </div>
         <div class="flex flex-col w-full justify-center items-center pt-4">
-            <div dir="rtl" class="flex flex-col justify-between max-w-[350px] w-full p-3 min-h-[400px] min-w-[300px] bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-6.png);">
+            <div dir="rtl" id="special-con" class="flex flex-col justify-between max-w-[350px] w-full p-3 min-h-[400px] min-w-[300px] bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-6.png);">
                 <div></div>
                 <div class="flex justify-between items-center">
                     <p class=" text-2xl font-bold pt-3">10,000,000</p>
@@ -187,3 +180,46 @@
         </div>
     </div>
 </body>
+<script type="module">
+    import {apiUrl} from '../scripts/api.js'
+    const faNum = (num) => {
+        return new Intl.NumberFormat('fa-IR', {style : "decimal" }).format(num).replace(/٬/g , "")
+    }
+    fetch(`${apiUrl()}/products/`)  
+            .then(response => response.json())  
+            .then(data => {  
+                document.getElementById('head-title').innerHTML = data[0].name
+                document.getElementById('head-desc').innerHTML = data[0].description
+                document.getElementById('head-img').setAttribute('src',`${apiUrl()}${data[0].image}`)
+                const productCon = document.getElementById('product-con')
+                const categoryCon = document.getElementById('category-con')
+                data.forEach(item => {  
+                    const div = document.createElement('div');
+                    div.className =  'flex flex-col max-w-[160px]'
+                    div.innerHTML = `  
+                        <img src="${apiUrl()}${item.image}" class="max-w-[140px]"/>
+                        <h3 class="text-[#FFA280] text-2xl font-bold pt-3">${item.name}</h3>
+                        <p class="pt-1 text-lg">${item.description}</p>
+                    `;  
+                    productCon.appendChild(div); 
+                }); 
+            })  
+            .catch(error => console.error('Error fetching data:', error)); 
+
+    fetch(`${apiUrl()}/ctegories/`)  
+    .then(response => response.json())  
+    .then(data => {  
+        const categoryCon = document.getElementById('category-con')
+        data.forEach(item => {  
+            const div = document.createElement('div');
+            div.className =  'flex flex-col w-full justify-center items-center gap-4'
+            div.innerHTML = `  
+                <a href="#"><img src="${apiUrl()}${item.image}"/></a>
+                <a href="#"><h3 class="text-[#FFA280] text-2xl font-bold">${item.name}</h3></a>
+            `;  
+            categoryCon.appendChild(div); 
+        }); 
+    })  
+    .catch(error => console.error('Error fetching data:', error)); 
+</script>
+</html>
