--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link href="../style/output.css" rel="stylesheet"> 
+    <script src="../scripts/api.js"></script>
 </head>
 <body class=" text-[#000000]">
     <!-- Header -->
     <div class="w-full h-14 xl:h-16 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between xl:px-8">
-        <img src="../assets/images/logo.png" class="pt-5"/>
+        <a href="./index.html"><img src="../assets/images/logo.png" class="pt-5"/></a>
         <div dir="rtl" class="gap-8 hidden xl:flex">
             <a class="font-medium" href="./">خانه</a>
             <a class="font-medium" href="./products.html">محصولات</a>
             <a class="font-medium" href="./about.html">درباره ما</a>
         </div>
         <div class="flex gap-5 items-center">
-            <a id="search-sub" class="invisible btn btn-sm">جستجو</a>
             <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
-            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="toggleSearch()"/>
+            <img src="../assets/icons/Search.svg" class="cursor-pointer" id="search-icon"/>
             <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
                 <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
@@ -28,6 +28,9 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div id="search-pro" class="absolute z-30 right-[22em] top-14 w-0 h-0 flex flex-col">
+
     </div>
 
     <!-- Product -->
@@ -163,6 +166,7 @@
         document.getElementById('color').innerHTML = data[0].color
         document.getElementById('image').setAttribute('src',apiUrl()+data[0].image)
         const imageCon = document.getElementById('imageCon')
+        images.push(apiUrl()+data[0].image)
         data[2].forEach(url => {
             const img = document.createElement('img')
             img.className = 'w-32 rounded-2xl max-h-36 min-h-28 h-32 bg-cover bg-center bg-no-repeat cursor-pointer transition-transform duration-300'
