--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -5,21 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محصولات</title>
     <link href="../style/output.css" rel="stylesheet">
-    
+    <script src="../scripts/api.js"></script>
 </head>
 <body class=" text-[#000000] flex flex-col justify-center  from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))]">
     <!-- Header -->
     <div class="w-full h-14 xl:h-16 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between xl:px-8">
-        <img src="../assets/images/logo.png" class="pt-5"/>
+        <a href="./index.html"><img src="../assets/images/logo.png" class="pt-5"/></a>
         <div dir="rtl" class="gap-8 hidden xl:flex">
             <a class="font-medium" href="./">خانه</a>
             <a class="font-medium" href="./products.html">محصولات</a>
             <a class="font-medium" href="./about.html">درباره ما</a>
         </div>
         <div class="flex gap-5 items-center">
-            <a id="search-sub" class="invisible btn btn-sm">جستجو</a>
             <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
-            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="toggleSearch()"/>
+            <img src="../assets/icons/Search.svg" class="cursor-pointer" id="search-icon"/>
             <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
                 <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
@@ -29,6 +28,9 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div id="search-pro" class="absolute z-30 right-[22em] top-14 w-0 h-0 flex flex-col">
+
     </div>
 
     <div class="w-full p-4 bg-[#FFA280] flex justify-center">
@@ -140,8 +142,13 @@
             return 'order=price'
         }
     }
+    const search = () => {
+        if(urlParams.has('search')){
+            return `search=${urlParams.get('search')}`
+        }
+    }
     function getProducts(){
-        fetch(`${apiUrl()}/products/?perpage=2&page=${currentPage}&${category()}&${order()}&from=${minPrice.value}&to=${maxPrice.value}&search=${urlParams.get('search')}`)  
+        fetch(`${apiUrl()}/products/?perpage=2&page=${currentPage}&${category()}&${order()}&from=${minPrice.value}&to=${maxPrice.value}&${search()}`)  
         .then(response => response.json())
         .then(data => {
             maxPage = Math.ceil(data[1]/2)
@@ -154,12 +161,12 @@
                 div.className =  'flex flex-col max-w-[160px]'
                 div.innerHTML = `  
                     <img src="${apiUrl()}${item.image}" class="max-w-[140px]"/>
-                    <h3 class="text-[#FFA280] text-2xl font-bold pt-3">${item.name}</h3>
+                    <a href="./product.html?id=${item.id}" class="text-[#FFA280] text-2xl font-bold pt-3">${item.name}</a>
                     <p class="pt-1 text-lg">${item.description}</p>
-                `;  
-                productCon.appendChild(div); 
-            }); 
-        })  
+                `;
+                productCon.appendChild(div);
+            });
+        })
         .catch(error => console.error('Error fetching data:', error));
     }
 
