server.js file added

--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -20,7 +20,7 @@
             <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
             <img src="../assets/icons/Search.svg" class="cursor-pointer" id="search-icon"/>
             <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
-                <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
+                <img tabindex="0" src="../assets/icons/menu1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
                 <li dir="rtl" class="font-medium text-lg"><a href="./">خانه</a></li>
                 <li dir="rtl" class="font-medium text-lg"><a href="./about.html">درباره ما</a></li>
@@ -105,8 +105,8 @@
                 <a href="./products.html" class="font-medium text-xl px-16">محصولات</a>
             </div>
             <div class="flex justify-center gap-20 items-center p-7">
-                <img class="w-8" src="../assets/icons/telegram 1.png"/>
-                <img class="w-8" src="../assets/icons/instagram 1.png"/>
+                <img class="w-8" src="../assets/icons/telegram1.png"/>
+                <img class="w-8" src="../assets/icons/instagram1.png"/>
                 <img class="w-8" src="../assets/icons/whatsapp.png"/>
             </div>
         </div>
