--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link href="../style/output.css" rel="stylesheet"> 
+    <script src="../scripts/api.js"></script>
 </head>
 <body class="font-[yekan] text-[#000000]">
     <!-- Header -->
     <div class="w-full h-14 xl:h-16 bg-gradient-to-r from-[#FAEFE9] to-[#FFA280] flex items-center justify-between xl:px-8">
-        <img src="../assets/images/logo.png" class="pt-5"/>
+        <a href="./index.html"><img src="../assets/images/logo.png" class="pt-5"/></a>
         <div dir="rtl" class="gap-8 hidden xl:flex">
             <a class="font-medium" href="./">خانه</a>
             <a class="font-medium" href="./products.html">محصولات</a>
             <a class="font-medium" href="./about.html">درباره ما</a>
         </div>
         <div class="flex gap-5 items-center">
-            <a id="search-sub" class="invisible btn btn-sm">جستجو</a>
             <input dir="rtl" id="search" type="text" placeholder="جستجو" class="input invisible input-bordered input-sm w-32 max-w-xs"/>
-            <img src="../assets/icons/Search.svg" class="cursor-pointer" onclick="toggleSearch()"/>
+            <img src="../assets/icons/Search.svg" class="cursor-pointer" id="search-icon"/>
             <div class="dropdown dropdown-bottom dropdown-end xl:hidden">
-                <img tabindex="0" src="../assets/icons/menu 1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
+                <img tabindex="0" src="../assets/icons/menu1.svg" class="pr-5 m-1 hover:cursor-pointer"/>
                 <ul tabindex="0" class="dropdown-content -mt-[45px] menu bg-base-100 rounded-bl-xl z-[1] w-52 p-2 shadow">
                 <li dir="rtl" class="font-medium text-lg"><a href="./">خانه</a></li>
                 <li dir="rtl" class="font-medium text-lg"><a href="./about.html">درباره ما</a></li>
@@ -28,6 +28,9 @@
                 </ul>
             </div>
         </div>
+    </div>
+    <div id="search-pro" class="absolute z-30 right-[22em] top-14 w-0 h-0 flex flex-col">
+
     </div>
 
     <!-- About us -->
@@ -57,8 +60,8 @@
                 <a href="./products.html" class="font-medium text-xl px-16">محصولات</a>
             </div>
             <div class="flex justify-center gap-20 items-center p-7">
-                <img class="w-8" src="../assets/icons/telegram 1.png"/>
-                <img class="w-8" src="../assets/icons/instagram 1.png"/>
+                <img class="w-8" src="../assets/icons/telegram1.png"/>
+                <img class="w-8" src="../assets/icons/instagram1.png"/>
                 <img class="w-8" src="../assets/icons/whatsapp.png"/>
             </div>
         </div>
