fixed pagination and buy product section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,7 +37,7 @@
     <div dir="rtl" class="w-full gap-10 px-9 py-16 xl:py-28 flex -my-2 flex-col justify-center items-center bg-cover bg-center bg-no-repeat" style="background-image: url(../assets/images/main-1.png);">
         <h2 id="head-title" class="text-4xl font-bold"></h2>
         <p id="head-desc" class="text-3xl font-medium text-center"></p>
-        <img id="head-img" src="../assets/images/main-2.png" class=""/>
+        <img id="head-img" src="" class=""/>
         <a id="head-btn" href="" class="btn bg-[#FFA280] border-[#FFA280] text-xl w-52 h-14 hover:bg-[#FFA280]">مشاهده محصول</a>
     </div>
 
@@ -75,8 +75,8 @@
     </div>
     <div class="w-full h-[2px] bg-[#C3C3C3]"></div>
 
-    <!-- Special products -->
-    <!-- <div class="flex flex-col w-full justify-center items-center gap-8 pt-16 px-7 py-9 from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_top_left,_var(--tw-gradient-stops))]">
+    <!-- Special products
+    <div class="flex flex-col w-full justify-center items-center gap-8 pt-16 px-7 py-9 from-[#ffe2d7] to-50% to-[#FAEFE9] bg-[radial-gradient(circle_at_top_left,_var(--tw-gradient-stops))]">
         <div class="flex flex-col w-full justify-center items-center">
             <h2 class="text-2xl font-bold"> محصولات ویژه</h2>
             <div class="w-36 h-2 bg-[#FFA280] mt-3 rounded-3xl z-20"></div>
