--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -51,7 +51,7 @@
             <div id="imageCon" class="flex space-x-1 mt-6 gap-3 overflow-x-auto">      
             </div> 
         </div>
-        <div class="flex flex-col py-7 px-3">
+        <div class="flex flex-col py-7 px-3 w-[45%]">
             <h2 id="name" class="text-2xl font-bold"></h2>
             <p id="desc" class=" pt-2 font-medium text-lg text-neutral"></p>
             
@@ -76,10 +76,23 @@
                 <p id="color" class="text-lg font-medium"></p>
             </div>
 
-            <div class="pt-10 flex gap-6 justify-between items-center">
-                <p class="text-xl font-medium">جهت خرید محصول با ما تماس بگیرید</p>
-                <a class="btn bg-[#FFA280] hover:bg-[#FFA280] h-[48px] text-lg">خرید محصول</a>
+            <div class="pt-10 flex gap-6 justify-center items-center">
+                <button class="btn bg-[#FFA280] hover:bg-[#FFA280] h-[48px] text-lg max-w-40" onclick="my_modal.showModal()">خرید محصول</button>
             </div>
+
+            <!-- <button class="btn " onclick="my_modal.showModal()">open modal</button> -->
+            <dialog id="my_modal" class="modal">
+                <div class="modal-box">
+                  <form method="dialog">
+                    <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                  </form>
+                  <h3 class="text-lg font-bold">خرید محصول</h3>
+                  <p class="pt-4 pb-2">جهت خرید محصول با ما تماس بگیرید</p>
+                  <p class="pb-6">شماره تماس: 09123456789</p>
+                  <button class="btn bg-[#FFA280] hover:bg-[#FFA280] ml-3">اینستاگرام</button>
+                  <button class="btn">واتساپ</button>
+                </div>
+            </dialog>
         </div>
     </div>
 
